--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -25,8 +25,7 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-  
+  	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -47,6 +46,10 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.0</version>
         </dependency>
-        
+        <dependency>
+    		<groupId>javax.servlet</groupId>
+   			 <artifactId>javax.servlet-api</artifactId>
+   			 <version>3.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
