--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -3,7 +3,7 @@
   <groupId>WebApp</groupId>
   <artifactId>WebApp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
